# omeganum-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.sh
.cargo/: aarch64-apple-darwin-cc.bat  config.toml  x86_64-apple-darwin-cc.bat  x86_64-unknown-linux-gnu-cc.bat
.github/workflows/: release.yml
omeganum/: omeganum-rs.gdextension
src/: hypercalc.rs  lib.rs  main.rs  omeganum.rs
tests/: omeganum_integration.rs
