[package]
name = "omeganum_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.9.2"
regex = "1.12.2"

[dev-dependencies]
quickcheck = "1.0"

[lib]
name = "omeganum_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]